examples/test/testpolicy4614.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4614
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key2: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value0
          key32: value27
          key8: value24
      podSelector:
        matchLabels:
          key32: value35
          key26: value6
          key43: value28
